force-app/main/default/objects/Prospective_Tenants_District360__c/Prospective_Tenants_District360__c.object-meta.xml
<CustomObject>
    <description>The people who shows interest for the vacant space, those details are captured in the Prospective tenants.</description>
    <label>Prospective Tenants</label>
    <nameField>
        <displayFormat>PT-{0000}</displayFormat>
        <label>Prospective Tenants Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prospective Tenants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>