force-app/main/default/objects/Prospective_Tenants_District360__c/fields/Account_District360__c.field-meta.xml
<CustomField>
    <fullName>Account_District360__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp; Contact_District360__r.Account.Id  ,  Contact_District360__r.Account.Name  , &quot;_self&quot;)</formula>
    <label>Account</label>
    <type>Text</type>
</CustomField>