force-app/main/default/objects/Prospective_Tenants_District360__c/fields/Amount_of_Space_Required_District360__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_Space_Required_District360__c</fullName>
    <label>Amount of Space Required (Sq Ft.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>