force-app/main/default/objects/Prospective_Tenants_District360__c/fields/Contact_District360__c.field-meta.xml
<CustomField>
    <fullName>Contact_District360__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Prospective Tenants</relationshipLabel>
    <relationshipName>Prospective_Tenants_District360</relationshipName>
    <type>Lookup</type>
</CustomField>