force-app/main/default/objects/Prospective_Tenants_District360__c/fields/Desired_Move_in_Date_District360__c.field-meta.xml
<CustomField>
    <fullName>Desired_Move_in_Date_District360__c</fullName>
    <label>Desired Move-in Date</label>
    <type>Date</type>
</CustomField>