force-app/main/default/objects/Prospective_Tenants_District360__c/fields/Email_District360__c.field-meta.xml
<CustomField>
    <fullName>Email_District360__c</fullName>
    <formula>Contact_District360__r.Email</formula>
    <label>Email</label>
    <type>Text</type>
</CustomField>