force-app/main/default/objects/Prospective_Tenants_District360__c/fields/Phone_District360__c.field-meta.xml
<CustomField>
    <fullName>Phone_District360__c</fullName>
    <formula>Contact_District360__r.Phone</formula>
    <label>Phone</label>
    <type>Text</type>
</CustomField>