force-app/main/default/objects/Prospective_Tenants_District360__c/fields/Preferred_Location_in_BID_District360__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Location_in_BID_District360__c</fullName>
    <label>Preferred Location in BID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>