force-app/main/default/objects/Prospective_Tenants_District360__c/fields/Rental_Budget_District360__c.field-meta.xml
<CustomField>
    <fullName>Rental_Budget_District360__c</fullName>
    <label>Rental Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>