force-app/main/default/objects/Prospective_Tenants_District360__c/fields/Status_District360__c.field-meta.xml
<CustomField>
    <fullName>Status_District360__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contract Signed</fullName>
            </value>
            <value>
                <fullName>Interested - Initial</fullName>
            </value>
            <value>
                <fullName>Interested - Site Visited</fullName>
            </value>
            <value>
                <fullName>Negotiation/Review</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>