force-app/main/default/objects/Prospective_Tenants_District360__c/fields/Vacancy_District360__c.field-meta.xml
<CustomField>
    <fullName>Vacancy_District360__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vacancy</label>
    <referenceTo>Vacancy_District360__c</referenceTo>
    <relationshipLabel>Prospective Tenants</relationshipLabel>
    <relationshipName>Prospective_Tenants</relationshipName>
    <type>Lookup</type>
</CustomField>