force-app/main/default/objects/Prospective_Tenants_District360__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_District360__c</columns>
    <columns>Desired_Move_in_Date_District360__c</columns>
    <columns>Contact_District360__c</columns>
    <columns>Phone_District360__c</columns>
    <columns>Preferred_Location_in_BID_District360__c</columns>
    <columns>Rental_Budget_District360__c</columns>
    <columns>Amount_of_Space_Required_District360__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>